trunk/Archive2/f1/65a084a6c78c8b/output
main.cpp:13:32: error: invalid use of incomplete type 'class X<std::basic_string<_CharT> >'
 X<std::basic_string<chart>>::X() {
                                ^
main.cpp:5:7: error: declaration of 'class X<std::basic_string<_CharT> >'
 class X {
       ^
